fix allowing non monotonic cover edges